filtrer et rechercher dans catalogue actif, futur, archive

--- a/app/vues/templates/frontend/vEnchere.twig
+++ b/app/vues/templates/frontend/vEnchere.twig
@@ -5,7 +5,7 @@
 		class="catalogue-header">
 		<!-- fil d'ariane -->
 		<ul>
-			<li><a href="#">Retour au catalogue</a></li>
+			<li><a href="#">Retour</a></li>
 		</ul>
 	</div>
 	<!-- Fiche timbre -->
