--- a/app/vues/templates/frontend/vCatalogue.twig
+++ b/app/vues/templates/frontend/vCatalogue.twig
@@ -109,7 +109,7 @@
 				<li>
 					<a href=".">Accueil</a>
 				</li>
-				<li class="catalogue-header-ariane-active">{{ typeEnchere|capitalize }}</li>
+				<li class="catalogue-header-ariane-active">{{ typeEnchere }}</li>
 			</ul>
 			<!-- toggle vue -->
 			<button id="grid-list">Grille / Liste</button>
@@ -143,11 +143,11 @@
 						<!-- metadonnees mises -->
 						<div class="stampcard-info-wrapper">
 							<div class="stampcard-info">
-								{% if typeEnchere is not same as 'enchères à venir' %}
+								{% if typeEnchere is not same as 'Enchères à venir' %}
 									<span>Nombre de mises:
 										{{ enchere.nb_mise }}</span>
 								{% endif %}
-								{% if typeEnchere is same as 'enchères à venir' %}
+								{% if typeEnchere is same as 'Enchères à venir' %}
 									<span>Date de début:
 										{{ enchere.enchere_date_debut|date('d/m/Y')}}</span>
 									<span>Heure de début:
@@ -163,7 +163,7 @@
 									{% else %}
 										<span>Enchère terminée</span>
 									{% endif %}
-									{% if (typeEnchere is same as 'enchères en cours' or typeEnchere is same as 'enchères') %}
+									{% if typeEnchere is same as 'Enchères en cours' %}
 										{% if enchere.mise_actuelle %}
 											<span>Mise actuelle :
 												{{ enchere.mise_actuelle|number_format(2, '.', ',') }}$</span>
@@ -177,7 +177,7 @@
 						<!-- boutons enchérir -->
 						<footer>
 							<a class="stampcard-button-cta" href=" enchere?enchere_id={{ enchere.enchere_id }} ">
-								{% if typeEnchere is same as 'enchères en cours' %}
+								{% if typeEnchere is same as 'Enchères en cours' %}
 									Enchérir
 									{{ enchere.mise_actuelle + 5|number_format(2, '.', ',') }}$
 								{% else %}
